# RTest

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  postinst  prerm
ressources/: rtest.qrc  viewer.qml
src/: CMakeLists.txt  RegulationKernelWrapper.cpp  RegulationKernelWrapper.hpp  StdinReader.cpp  StdinReader.hpp  VehicleViewer.cpp  VehicleViewer.hpp  VehicleViewer.ui  main.cpp
